--- a/recipes/lasanga.html
+++ b/recipes/lasanga.html
@@ -7,6 +7,24 @@
     <body>
         <h1>Lasanga</h1>
         <img src="lasagna.jpg" alt="Lasanga">
+        <h4>Description</h4>
         <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
+
+        <p>Ingredients</p>
+        <ul>
+            <li>Meat</li>
+            <li>Onions and Garlic</li>
+            <li>Tomato</li>
+            <li>Sugar</li>
+            <li>Lasagna noodles</li>
+            <li>Cheese</li>
+        </ul>
+        <ol>
+            <li>Make the meat sauce</li>
+            <li>Cook the noodles</li>
+            <li>Make the mixture</li>
+            <li>Layer the lasagna</li>
+            <li>Bake</li>
+        </ol>
     </body>
 </html>
