--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="./recipes/lasanga.html">Lasanga</a></li>
+            <li><a href="./recipes/burek.html">Burek</a></li>
         </ul>
     </body>
 </html>
