--- a/recipes/lasanga.html
+++ b/recipes/lasanga.html
@@ -10,7 +10,7 @@
         <h4>Description</h4>
         <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
 
-        <p>Ingredients</p>
+        <h4>Ingredients</h4>
         <ul>
             <li>Meat</li>
             <li>Onions and Garlic</li>
@@ -19,6 +19,7 @@
             <li>Lasagna noodles</li>
             <li>Cheese</li>
         </ul>
+        <h4>Steps</h4>
         <ol>
             <li>Make the meat sauce</li>
             <li>Cook the noodles</li>
