--- a/recipes/burek.html
+++ b/recipes/burek.html
@@ -14,14 +14,13 @@
             My mom is from Bosnia and made this for me while I was growing up — 
             my whole family always looked forward to it. Serve with Balkan-style yogurt for authenticity.
         </p>
-        <br>
 
-        <p>Ingredients</p>
+        <h4>Ingredients</h4>
         <ul>
             <li>Meat</li>
             <li>Dough</li>
         </ul>
-        <p>Steps</p>
+        <h4>Steps</h4>
         <ol>
             <li>Put meat into dough</li>
             <li>Bake</li>
