changed index.html design

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="./recipes/lasanga.html">Lasanga</a></li>
-            <li><a href="./recipes/burek.html">Burek</a></li>
-        </ul>
+        <div class="list">
+            <ul class="myUL">
+                <li><a href="./recipes/lasanga.html">Lasanga</a></li>
+                <li><a href="./recipes/burek.html">Burek</a></li>
+            </ul>
+        </div>
     </body>
 </html>
