new design for burek and lasanga

--- a/recipes/burek.html
+++ b/recipes/burek.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UFT-8">
         <title>Burek</title>
+        <link rel="stylesheet" href="./style.css"/>
     </head>
     <body>
         <h1>Burek</h1>
@@ -10,20 +11,22 @@
         <br>
 
         <h4>Description</h4>
-        <p>This burek recipe is Eastern European in origin. 
-            My mom is from Bosnia and made this for me while I was growing up — 
+        <p>This burek recipe is Eastern European in origin.<br> 
+            My mom is from Bosnia and made this for me while I was growing up — <br>
             my whole family always looked forward to it. Serve with Balkan-style yogurt for authenticity.
         </p>
 
-        <h4>Ingredients</h4>
-        <ul>
-            <li>Meat</li>
-            <li>Dough</li>
-        </ul>
-        <h4>Steps</h4>
-        <ol>
-            <li>Put meat into dough</li>
-            <li>Bake</li>
-        </ol>
+        <div class="list">
+            <h4>Ingredients</h4>
+            <ul class="myUL">
+                <li>Meat</li>
+                <li>Dough</li>
+            </ul>
+            <h4>Steps</h4>
+            <ol class="myUL">
+                <li>Put meat into dough</li>
+                <li>Bake</li>
+            </ol>
+        </div>
     </body>
 </html>
