--- a/recipes/lasanga.html
+++ b/recipes/lasanga.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UFT-8">
         <title>Lasanga</title>
+        <link rel="stylesheet" href="./style.css"/>
     </head>
     <body>
         <h1>Lasanga</h1>
@@ -10,22 +11,24 @@
         <h4>Description</h4>
         <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
 
-        <h4>Ingredients</h4>
-        <ul>
-            <li>Meat</li>
-            <li>Onions and Garlic</li>
-            <li>Tomato</li>
-            <li>Sugar</li>
-            <li>Lasagna noodles</li>
-            <li>Cheese</li>
-        </ul>
-        <h4>Steps</h4>
-        <ol>
-            <li>Make the meat sauce</li>
-            <li>Cook the noodles</li>
-            <li>Make the mixture</li>
-            <li>Layer the lasagna</li>
-            <li>Bake</li>
-        </ol>
+        <div class="list">
+            <h4>Ingredients</h4>
+            <ul class="myUL">
+                <li>Meat</li>
+                <li>Onions and Garlic</li>
+                <li>Tomato</li>
+                <li>Sugar</li>
+                <li>Lasagna noodles</li>
+                <li>Cheese</li>
+            </ul>
+            <h4>Steps</h4>
+            <ol class="myUL">
+                <li>Make the meat sauce</li>
+                <li>Cook the noodles</li>
+                <li>Make the mixture</li>
+                <li>Layer the lasagna</li>
+                <li>Bake</li>
+            </ol>
+        </div>
     </body>
 </html>
